# Actuator_final

./:  .gitignore  .gitignore  AGENTS.md  CMakeLists.txt  README.md  TODO.md  demo.txt  plan.md
.github/: copilot-instructions.md
docs/: coordinator-flows.drawio  demo-to-input-mapping.md  project-overview.md  src-code-introduction-word.md  task-execution-flow.drawio
docs/component-cards/: README.md  constraint-evaluator.drawio  coordinator-coordinator.drawio  coordinator-inter-sat-comm.drawio  coordinator-message-types.drawio  coordinator-node-registry.drawio  core-logger.drawio  core-types.drawio  executor-generic-executor.drawio  executor-satellite-simulator.drawio  executor-variable-manager.drawio  parser-behavior.drawio  parser-json.drawio
src/: main.cpp
src/constraint/: evaluator.cpp  evaluator.h
src/coordinator/: coordinator.cpp  coordinator.h  distributed_semaphore.cpp  distributed_semaphore.h  inter_sat_comm.cpp  inter_sat_comm.h  message_types.h  node_registry.cpp  node_registry.h  task_distributor.h
src/core/: logger.h  types.h
src/executor/: command_handlers.h  generic_executor.cpp  generic_executor.h  satellite_simulator.cpp  satellite_simulator.h  semaphore_manager.cpp  semaphore_manager.h  simple_executor.cpp  state_manager.cpp  state_manager.h  variable_manager.cpp  variable_manager.h
src/input/: behaviorTree.json  global.json  json_parser.cpp  json_parser.h  schedule.json
src/parser/: behavior_parser.cpp  behavior_parser.h  json_parser.cpp  json_parser.h
tests/: CMakeLists.txt  condition_executor_test.cpp
